# vscodenb

./: .nojekyll  CHANGELOG.md  README.md  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: conda-release.yml  quarto-publish.yml
.scripts/: template_init.py
api/: CPUMonitor.html  CPUMonitorMagics.html  Left.html  SlurmMagic.html  detect_compute_nodes.html  functionname.html  get_cached_nodes.html  html_style.html  index.html  ipython.html  iridis.html  is_vscode_dark_theme.html  lighten_colors.html  monitor.html  pqdm.html  prange.html  scriptname.html  set_vscode_theme.html  truncate_colormap.html  vscode_theme.html
conda-build/: meta.yaml
docs/: README.md  _quarto.yml  objects.txt
docs/_inv/: griffe_objects.txt  python_objects.txt
docs/api/: _sidebar.yml  functionname.qmd  index.qmd  scriptname.qmd
docs/pages/: cpu_monitoring.ipynb  overview.ipynb  plot_theme.ipynb  progress.ipynb  slurm_magic.ipynb
docs/pages/project-guide/: git_101.qmd  setup.qmd  submodules.qmd
pages/: cpu_monitoring.html  example.html  overview.html  plot_theme.html  progress.html  slurm_magic.html
pages/project-guide/: git_101.html  setup.html  submodules.html
scripts/: docs-build-render.sh  docs-run-notebooks.sh  github-release.sh  rename.py
src/vscodenb/: __init__.py  cpu_monitor.py  plot_theme.py  progress.py  slurm_magic.py
src/vsnb/: __init__.py  cpu_monitor.py  plot_theme.py  progress.py
test/: test_modulename.py
